--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>ReliSafe</title>
+   <img src="Relisafe.png" alt="ReliSafe Logo" style="display: none;" id="html-logo">
 </head>
 
 <body>
