--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>ReliSafe</title>
+  <title>rams360</title>
    <img src="Relisafe.png" alt="ReliSafe Logo" style="display: none;" id="html-logo">
+   
 </head>
 
 <body>
